--- a/src/app.scss
+++ b/src/app.scss
@@ -3,5 +3,10 @@
 }
 
 .errorHeight{
-    height: 50px;
+    height: 30px;
+}
+
+#location {
+    height: 400px;  /* The height is 400 pixels */
+    width: 100%;  /* The width is the width of the web page */
 }
